Changed path to Figures folder
becasue it is now ../../

--- a/FirePaperRevised.tex
+++ b/FirePaperRevised.tex
@@ -114,7 +114,7 @@ The PM aluminum foam had dimensions 14.8 cm $\times$ 6.0 cm $\times$ 6.0 cm and 
  
 \begin{figure}[htbp]
 	\begin{center}
-		\includegraphics[width=0.95\linewidth]{../Figures/Fig01a_b_c.png}
+		\includegraphics[width=0.95\linewidth]{../../Figures/Fig01a_b_c.png}
 		\caption{Metallic foam samples: (a) aluminum, (b) hollow sphere steel and (c) actual steel specimen before testing. Metallic foams are cellular metals, where steel foam resembles closely packed hollow spheres.}
 		\label{Samples}
 	\end{center}
@@ -126,7 +126,7 @@ The pore size dimensions were determined to ensure that each cross-section conta
 
 \begin{figure}[htbp]
 	\begin{center}
-		\includegraphics[width=0.80\linewidth]{../Figures/Fig02a_b.png}
+		\includegraphics[width=0.80\linewidth]{../../Figures/Fig02a_b.png}
 		\caption{Measurement of the pore size: (a) HS steel foam and (b) aluminum foam sample. Diameter of the spherical shell affects its stability and load capacity.}
 		\label{PoreMeas}
 	\end{center}
@@ -138,13 +138,13 @@ Normal distribution function with mean equal to 1.79 mm and variance of 0.19 mm$
 	\centering
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=0.95\linewidth]{../Figures/Fig03a.pdf}
+		\includegraphics[width=0.95\linewidth]{../../Figures/Fig03a.pdf}
 		\caption{Steel foam}
 		\label{fig3:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=0.95\linewidth]{../Figures/Fig03b.pdf}
+		\includegraphics[width=0.95\linewidth]{../../Figures/Fig03b.pdf}
 		\caption{Aluminum foam}
 		\label{fig3:sub2}
 	\end{subfigure}
@@ -156,7 +156,7 @@ If the pore shape is spherical, the measurement of the pore size through a trans
 
 \begin{figure}[htbp]
 	\begin{center}
-		\includegraphics[width=0.95\linewidth]{../Figures/Fig04.png}
+		\includegraphics[width=0.95\linewidth]{../../Figures/Fig04.png}
 		\caption{Schematic lateral view of the cut plane on the sample. One can notice that cross-sectional diameters do not coincide with the true diameter of the sphere or cavity.}
 		\label{FoamCutPlane}
 	\end{center}
@@ -171,7 +171,7 @@ Let us consider an unknown amplification factor as the ratio between the mean of
 
 \begin{figure}[htbp]
 	\begin{center}
-		\includegraphics[width=0.75\linewidth]{../Figures/Fig05.png}
+		\includegraphics[width=0.75\linewidth]{../../Figures/Fig05.png}
 		\caption{Cutting a sphere at random elevations we computed the relationship between the expected mean radius in the cut plane and the real radius of the spherical cavity.}
 		\label{RandomPlaneCut}
 	\end{center}
@@ -221,7 +221,7 @@ The compressive testing was conducted using a servo-hydraulic Materials Testing 
 
 \begin{figure}[htbp]
 	\begin{center}
-		\includegraphics[width=0.95\linewidth]{../Figures/Fig06.png}
+		\includegraphics[width=0.95\linewidth]{../../Figures/Fig06.png}
 		\caption{Thermal-mechanical compressive test setup: (a) annotated schematic of high-temperature furnace, and (b) Actual view of the opened furnace. Sample is heated first, and loaded after stable internal temperature is reached. Strains were measured with an extensometer inside the furnace.}
 		\label{MTSFurnace}
 	\end{center}
@@ -237,7 +237,7 @@ The compressive stress-strain behavior of metallic foams exhibited three distinc
 
 \begin{figure}[htbp]
 	\begin{center}
-		\includegraphics[width=0.75\linewidth]{../Figures/Fig07.pdf}
+		\includegraphics[width=0.75\linewidth]{../../Figures/Fig07.pdf}
 		\caption{Parametrization of a typical, non-linear stress strain curve of metallic foam. Initial modulus corresponds to the foam stiffness, yield stress is computed at 0.2\% offset, plastic hardening is the linear fit and plateau stress is the average stress in the range of 20-30\% strains. Curvature of the transition from elastic to plastic behavior is characterized with parameter $n_y$.}
 		\label{fig:MetFoaBeh}
 	\end{center}
@@ -253,13 +253,13 @@ An insightful reader can notice that properties at 300C are higher than room tem
 	\centering
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=0.98\linewidth]{../Figures/Fig08a.pdf}
+		\includegraphics[width=0.98\linewidth]{../../Figures/Fig08a.pdf}
 		\caption{Al foam}
 		\label{fig8:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=0.98\linewidth]{../Figures/Fig08b.pdf}
+		\includegraphics[width=0.98\linewidth]{../../Figures/Fig08b.pdf}
 		\caption{Steel foam}
 		\label{fig8:sub2}
 	\end{subfigure}
@@ -270,7 +270,7 @@ An insightful reader can notice that properties at 300C are higher than room tem
 \begin{figure}[htbp]
 	\begin{center}
 		\includegraphics[width=0.75\linewidth]
-		{../Figures/Fig09-Blue_brittleness.pdf}
+		{../../Figures/Fig09-Blue_brittleness.pdf}
 		\caption{(left) HS steel foam specimen before testing, (right) HS steel foam specimen after testing at $300\,^{\circ}\mathrm{C}$ following 30 minute exposure. Discoloration of the heated specimen indicated formation of the blue oxide film, which was highly likely stiffening the spherical shells. Formation of the stiffer oxide layer could explain better experimental performance of the steel foam samples, in comparison to the simulated predictions.}
 		\label{fig:BlueOxide}
 	\end{center}
@@ -318,7 +318,7 @@ Von Mises effective stress of the model under increasing compressive pressure (F
 \begin{figure}[htbp]
 	\begin{center}
 		\includegraphics[width=0.75\linewidth]
-		{../Figures/Fig10-SimulatedCompression}
+		{../../Figures/Fig10-SimulatedCompression}
 		\caption{Comparison of experimental (diamonds and circles) and computational (continuous lines) strength predictions at room (RT) and high temperature ($550\,^{\circ}\mathrm{C}$). Von Mises stress (MPa) localized in the contact regions of the hollow steel spheres. Multiple and irregular load paths followed the random packing of the spheres, which resulted from the nature of the manufacturing process. Whereas simulated and experimental data showed good agreement, steel foam samples exhibited higher stiffness and strength at high temperatures when compared to the computational prediction.}
 		\label{Figure5}
 	\end{center}
@@ -331,7 +331,7 @@ The plastic strains localized in a few contact locations at 1.2\% global enginee
 \begin{figure}[htbp]
 	\begin{center}
 		\includegraphics[width=0.80\linewidth]
-		{../Figures/Fig11-PlasticBuckling.png}
+		{../../Figures/Fig11-PlasticBuckling.png}
 		\caption{Plasticity localized at sphere interfaces experiencing plastic deformations arising from contact forces. As the load increased, the number of contact pairs and subsequently, plastic regions surged (b-c). Radius, $R$ and thickness, $t$ of the spherical shell, the diameter of the contact interface, $d_c$ and material properties of the hollow spheres influence the local resistance mechanism (d). Following the initial yielding around the contact region, the plasticity spreads toward the equator of the sphere, accompanied by the gradually increasing diameter of the plastic hinge hoop moving outwards from the initial contact area (e-f). Due to the random packing, the number of contact regions and their directions vary from sphere to sphere, which is consistent with experimental study reported by Fallet et al. in \cite{Fallet2008}.}
 		\label{Fig:SimulatedBuckling}
 	\end{center}
@@ -378,7 +378,7 @@ If slenderness $\lambda<1$, then the structure is controlled by the material fai
 	\begin{subfigure}{0.95\textwidth}
 		\centering
 		\includegraphics[width=0.65\linewidth]
-		{../Figures/Fig12a_Buckling_b_t.pdf}
+		{../../Figures/Fig12a_Buckling_b_t.pdf}
 		\caption{The effect of geometric slenderness on the buckling capacity of a single sphere.}
 		\label{fig12:sub1}
 	\end{subfigure}
@@ -388,7 +388,7 @@ If slenderness $\lambda<1$, then the structure is controlled by the material fai
 	\begin{subfigure}{0.95\textwidth}
 		\centering
 		\includegraphics[width=0.65\linewidth]
-		{../Figures/Fig12b_Buckling_lambda.pdf}
+		{../../Figures/Fig12b_Buckling_lambda.pdf}
 		\caption{The effect of slenderness ratio on the buckling strength of a hollow sphere.}
 		\label{fig12:sub2}
 	\end{subfigure}
@@ -431,14 +431,14 @@ Porous metallic materials are known to exhibit substantial plastic yielding capa
 	\begin{subfigure}{.5\textwidth}
 		\centering
 		\includegraphics[width=0.95\linewidth]
-		{../Figures/Fig13a-yield_stress.pdf}
+		{../../Figures/Fig13a-yield_stress.pdf}
 		\caption{Steel foam}
 		\label{fig3:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 		\centering
 		\includegraphics[width=0.95\linewidth]
-		{../Figures/Fig13b-yield_stress.pdf}
+		{../../Figures/Fig13b-yield_stress.pdf}
 		\caption{Aluminum foam}
 		\label{fig3:sub2}
 	\end{subfigure}
@@ -457,14 +457,14 @@ The plateau stress, shown in Figure \ref{Plateu_stress}, was calculated followin
 	\begin{subfigure}{.5\textwidth}
 		\centering
 		\includegraphics[width=0.95\linewidth]
-		{../Figures/Fig14a-plateau_stress.pdf}
+		{../../Figures/Fig14a-plateau_stress.pdf}
 		\caption{Steel foam}
 		\label{fig3:sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 		\centering
 		\includegraphics[width=0.95\linewidth]
-		{../Figures/Fig14b-plateau_stress.pdf}
+		{../../Figures/Fig14b-plateau_stress.pdf}
 		\caption{Aluminum foam}
 		\label{fig3:sub2}
 	\end{subfigure}
@@ -499,7 +499,7 @@ The fitted values for the parameters in Eq. \ref{Eq9} were determined using cons
 	\begin{subfigure}{1.00\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig15a-StressStrain-fit-Fe.pdf}
+		{../../Figures/Fig15a-StressStrain-fit-Fe.pdf}
 		\caption{Steel foam}
 		\label{fig:StressStrain_Rich_Steel}
 	\end{subfigure}
@@ -509,7 +509,7 @@ The fitted values for the parameters in Eq. \ref{Eq9} were determined using cons
 	\begin{subfigure}{1.00\textwidth}
 		\centering
 		\includegraphics[width=0.70\linewidth]
-		{../Figures/Fig15b-StressStrain-fit-Al.pdf}
+		{../../Figures/Fig15b-StressStrain-fit-Al.pdf}
 		\caption{Aluminum foam}
 		\label{fig:StressStrain_Rich_Al}
 	\end{subfigure}
@@ -528,7 +528,7 @@ The quasi-elastic modulus is the initial slope of the elastic phase of the compr
 	\begin{subfigure}{1.00\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig16a-quasi-Elastic-fit-Fe.pdf}
+		{../../Figures/Fig16a-quasi-Elastic-fit-Fe.pdf}
 		\caption{Steel foam}
 		\label{fig:qElas_Rich_Steel}
 	\end{subfigure}
@@ -538,7 +538,7 @@ The quasi-elastic modulus is the initial slope of the elastic phase of the compr
 	\begin{subfigure}{1.00\textwidth}
 		\centering
 		\includegraphics[width=0.70\linewidth]
-		{../Figures/Fig16b-quasi-Elastic-fit-Al.pdf}
+		{../../Figures/Fig16b-quasi-Elastic-fit-Al.pdf}
 		\caption{Aluminum foam}
 		\label{fig:qElas_Rich_Al}
 	\end{subfigure}
@@ -554,14 +554,14 @@ Figure \ref{fig:Quasi-elast-modulus} show the resulting retained quasi-elastic m
 	\begin{subfigure}{0.50\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig17a-qElast-Fe.pdf}
+		{../../Figures/Fig17a-qElast-Fe.pdf}
 		\caption{Steel foam}
 		\label{fig:Quasi-elast-modulus_Steel}
 	\end{subfigure}% need comment here
 	\begin{subfigure}{0.50\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig17b-qElast-Al.pdf}
+		{../../Figures/Fig17b-qElast-Al.pdf}
 		\caption{Aluminum foam}
 		\label{fig:Quasi-elast-modulus_Al}
 	\end{subfigure}
@@ -581,14 +581,14 @@ The fitted parameters enable close approximation of the full stress-strain behav
 	\begin{subfigure}{0.50\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig18a-quasi-Hardening-Fe.pdf}
+		{../../Figures/Fig18a-quasi-Hardening-Fe.pdf}
 		\caption{Steel foam}
 		\label{fig:Quasi-hardening-modulus_Steel}
 	\end{subfigure}% need comment here
 	\begin{subfigure}{0.50\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig18b-quasi-Hardening-Al.pdf}
+		{../../Figures/Fig18b-quasi-Hardening-Al.pdf}
 		\caption{Aluminum foam}
 		\label{fig:Quasi-hardening-modulus_Al}
 	\end{subfigure}
@@ -606,14 +606,14 @@ The point of intersection of the two piecewise curves in Eq. \ref{Eq9} identical
 	\begin{subfigure}{0.50\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig19a-densification-Fe.pdf}
+		{../../Figures/Fig19a-densification-Fe.pdf}
 		\caption{Steel foam}
 		\label{fig:densification_Steel}
 	\end{subfigure}% need comment here
 	\begin{subfigure}{0.50\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig19b-densification-Al.pdf}
+		{../../Figures/Fig19b-densification-Al.pdf}
 		\caption{Aluminum foam}
 		\label{fig:densifiation_Al}
 	\end{subfigure}
@@ -629,7 +629,7 @@ While ISO Standard 13314:2011 does specify a methodology for calculating the ene
 \begin{figure}[htbp]
 	\begin{center}
 		\includegraphics[width=0.60\linewidth]
-		{../Figures/Fig20-energyAbsorptionEfficiency.png}
+		{../../Figures/Fig20-energyAbsorptionEfficiency.png}
 		\vspace{-0.2cm}
 		\caption{Schematic representation of methodology for calculating energy absorption efficiency.}
 		\label{EnAbsEffExpl}
@@ -643,14 +643,14 @@ The energy absorption capacity is calculated either by integrating the stress-st
 	\begin{subfigure}{0.50\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig21a-EnergyCapacity-Fe.pdf}
+		{../../Figures/Fig21a-EnergyCapacity-Fe.pdf}
 		\caption{Steel foam}
 		\label{fig:energyCapacity_Steel}
 	\end{subfigure}% need comment here
 	\begin{subfigure}{0.50\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig21b-EnergyCapacity-Al.pdf}
+		{../../Figures/Fig21b-EnergyCapacity-Al.pdf}
 		\caption{Aluminum foam}
 		\label{fig:energyCapacity_Al}
 	\end{subfigure}
@@ -665,14 +665,14 @@ For the HS steel foam specimens, the energy absorption efficiency is nearly cons
 	\begin{subfigure}{0.50\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig22a-energyEfficiency-Fe.pdf}
+		{../../Figures/Fig22a-energyEfficiency-Fe.pdf}
 		\caption{Steel foam}
 		\label{fig:energyEfficiency_Steel}
 	\end{subfigure}% need comment here
 	\begin{subfigure}{0.50\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig22b-energyEfficiency-Al.pdf}
+		{../../Figures/Fig22b-energyEfficiency-Al.pdf}
 		\caption{Aluminum foam}
 		\label{fig:energyEfficiency_Al}
 	\end{subfigure}
@@ -697,14 +697,14 @@ Although manufacturing of steel foam is more expensive than aluminum foam due to
 	\begin{subfigure}{0.50\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig23a-retentionFactor-Fe.pdf}
+		{../../Figures/Fig23a-retentionFactor-Fe.pdf}
 		\caption{Steel foam}
 		\label{fig:retention_Steel}
 	\end{subfigure}% need comment here
 	\begin{subfigure}{0.50\textwidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
-		{../Figures/Fig23b-retentionFactor-Al.pdf}
+		{../../Figures/Fig23b-retentionFactor-Al.pdf}
 		\caption{Aluminum foam}
 		\label{retention_Al}
 	\end{subfigure}
