--- a/FirePaperRevised.tex
+++ b/FirePaperRevised.tex
@@ -790,6 +790,8 @@ The high thermal resilience of steel foams suggests that their potential range o
 	\end{tabular}%
 \end{table}%
 
+\FloatBarrier
+
 \renewcommand{\nomname}{List of Symbols}
 
 % Equation 1
@@ -857,7 +859,7 @@ The high thermal resilience of steel foams suggests that their potential range o
 
 \printnomenclature[1.5cm]
 
-\section*{Acknowledgements}
+\section*{Acknowledgments}
 
 The authors would like to express heartfelt gratitude to our academic colleagues for their feedback and fruitful discussions. We are grateful to Fraunhofer IWU in Chemnitz and Fraunhofer IFAM in Dresden for the ongoing collaboration, and for their help with supplying the metallic foam rectangular prisms for mechanical testing.
 
